Fixes homepage cutoff.

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -57,7 +57,7 @@ h3 {
   h1 {
     color: white;
     text-align: center;
-    margin-top: 35%;
+    margin-top: 15%;
     font-weight: 600;
   }
 
